--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
        uses: appleboy/ssh-action@master
        with:
           host: ${{ secrets.HOST }}
-          username:  ${{ secrets.USER }}
+          username:  ${{ secrets.USERNAME }}
           key:  ${{ secrets.KEY }}
           port:  ${{ secrets.PORT }}
           script: |
@@ -49,8 +49,7 @@ jobs:
                git pull origin main
                npm install
                npm run build
-               pm2 restart api
-            
+         
 
 
 
